# rnn-rust

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
src/data/: mod.rs
src/model/: activation.rs  evaluator.rs  gradient.rs  loss.rs  mod.rs  optimizer.rs  workspace.rs
src/utils/: cli.rs  log.rs  matrix.rs  mod.rs
