[package]
name = "rnn-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
colog = "1.4.0"
colored = "3.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.28"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
debug = true
